# pybandits

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  AUTHORS.md  AUTHORS.rst  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini  update_version.py
.build/: Dockerfile.tests  tc.config.json
.github/: CODE_OF_CONDUCT.md  ISSUE_TEMPLATE.md  release-drafter.yml
.github/workflows/: ci.yml  continuous_delivery.yml  continuous_documentation.yml  continuous_integration.yml  pull_request_style_check.yml  release.yml  release_draft.yml
docs/: api.html  authors.html  badges.html  fullapi.html  genindex.html  help.html  index.html  installation.html  license.html  objects.inv  py-modindex.html  pybandits.html  search.html  searchindex.js  tutorials.html
docs/_sources/: api.rst.txt  help.rst.txt  index.rst.txt  installation.rst.txt  pybandits.rst.txt  tutorials.rst.txt
docs/_sources/tutorials/: cmab.ipynb.txt  smab.ipynb.txt
docs/_static/: documentation_options.js
docs/src/: Makefile  acronyms.md  api.md  authors.md  badges.md  badges.rst  conf.py  fullapi.md  fullapi.rst  help.md  index.md  installation.md  installation.rst  license.md  pybandits.md  tutorials.md
docs/src/tutorials/: cmab.ipynb  cmab_simulator.ipynb  simulation_cmab.ipynb  simulation_smab.ipynb  smab.ipynb  smab_simulator.ipynb
docs/tutorials/: cmab.html  cmab.ipynb  mab.ipynb  simulation_cmab.html  simulation_cmab.ipynb  simulation_smab.html  smab.html  smab.ipynb  smab_mo_cc.ipynb
pybandits/: __init__.py  base.py  cmab.py  cmab_simulator.py  mab.py  model.py  offline_policy_estimator.py  offline_policy_evaluator.py  pydantic_version_compatibility.py  simulation_cmab.py  simulation_plots.py  simulation_smab.py  simulator.py  smab.py  smab_simulator.py  strategy.py  utils.py
pybandits/core/: base.py  cmab.py  model.py  smab.py  strategy.py
pybandits/utils/: simulation_cmab.py  simulation_plots.py  simulation_smab.py
tests/: test_base.py  test_cmab.py  test_cmab_simulator.py  test_execution_time.py  test_mab.py  test_model.py  test_offline_policy_estimator.py  test_offline_policy_evaluator.py  test_python_version_compatability.py  test_simulation_cmab.py  test_simulation_smab.py  test_simulator.py  test_smab.py  test_smab_simulator.py  test_strategy.py  test_utils.py
