[tool.poetry]
name = "pybandits"
version = "0.4.0"
description = "Python Multi-Armed Bandit Library"
authors = [
    "Dario d'Andrea <dariod@playtika.com>",
    "Jerome Carayol <jeromec@playtika.com>",
    "Stefano Piazza <stefanop@playtika.com>",
    "Raphael Steinmann <raphaels@playtika.com>",
    "Armand Valsesia <armandv@playtika.com>",
]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<3.12"
loguru = "^0.6.0"
numpy = "^1.24.2"
pydantic = "^2.8.2"
scipy = "^1.10.1"
pymc = "^5.3.0"
scikit-learn = "^1.2.2"

[tool.poetry.group.dev.dependencies]
hypothesis = "^6.68.2"
pytest = "^7.2.2"
tox = "^4.4.7"
pandas = "^1.5.3"
pre-commit = "^3.1.1"
nbdev = "^2.3.12"
rich = "^13.3.2"
pyzmq = "25.0.0"
ipykernel = "^6.21.3"
jupyterlab = "^3.6.1"
pytest-cov = "^4.0.0"
pytest_mock = "^3.14.0"
ruff = "^0.5.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = "pydantic.mypy"

[tool.ruff]
line-length = 120
extend-include = ["*.ipynb"]
extend-ignore = ["E203"]

# pylint configuration incorporated in Ruff
[tool.ruff.lint]
# Enable the isort rules.
extend-select = ["I"]

[tool.ruff.per-file-ignores]
# disable check for:
# D100: Missing docstring in public module (equivalent to C0114)
# D101: Missing docstring in public class (equivalent to C0115)
# D102: Missing docstring in public method (equivalent to C0116)
# D103: Missing docstring in public function (equivalent to C0116)
# D104: Missing docstring in public package (equivalent to C0114)
# D105: Missing docstring in magic method (equivalent to C0116)
# D106: Missing docstring in public nested class (equivalent to C0115)
# Missing : Too few public methods (equivalent to R0903)
# PLR0913: Too many arguments (equivalent to R0913)
"*.py" = ["D100", "D101", "D102", "D103", "D104", "D105", "D106", "PLR0913"]
