[tool.poetry]
name = "pybandits"
version = "1.2.0"
description = "Python Multi-Armed Bandit Library"
authors = [
    "Dario d'Andrea <dariod@playtika.com>",
    "Jerome Carayol <jeromec@playtika.com>",
    "Stefano Piazza <stefanop@playtika.com>",
    "Raphael Steinmann <raphaels@playtika.com>",
    "Armand Valsesia <armandv@playtika.com>",
]
license = "MIT License"
readme = "README.md"
homepage = "https://github.com/PlaytikaOSS/pybandits"
repository = "https://github.com/PlaytikaOSS/pybandits"
keywords = ["multi-armed bandit", "reinforcement-learning", "optimization"]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.13"
loguru = "^0.6"
numpy = [
    { version = "<1.25", python = "3.8.*" },
    { version = ">=1.25", python = ">=3.9,<3.12" },
    { version = ">=1.26", python = "3.12.*" },
]
pydantic = ">=1.10"
scipy = [
    { version = ">=1.9,<1.13", python = ">=3.8,<3.12" },
    { version = ">=1.11,<1.13", python = "3.12.*" },
]
pymc = [
    { version = "^5.3", python = "3.8.*" },
    { version = "^5.10", python = ">=3.9" },
]
scikit-learn = "^1.1"
optuna = "^3.6"
bokeh = "^3.1"

[tool.poetry.group.dev.dependencies]
hypothesis = "^6.68.2"
pytest = "^8.3.3"
tox = "^4.4.7"
pandas = ">=1.5.3"
pre-commit = "^3.1.1"
nbstripout = "^0.7.1"
ipykernel = "^6.21.3"
jupyterlab = "^3.6.1"
pytest-cov = "^5.0.0"
pytest_mock = "^3.14.0"
ruff = "^0.5.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = "pydantic.mypy"

[tool.ruff]
line-length = 120
extend-include = ["*.ipynb"]
extend-ignore = ["E203"]

# pylint configuration incorporated in Ruff
[tool.ruff.lint]
# Enable the isort rules.
extend-select = ["I"]

[tool.ruff.per-file-ignores]
# disable check for:
# D100: Missing docstring in public module (equivalent to C0114)
# D101: Missing docstring in public class (equivalent to C0115)
# D102: Missing docstring in public method (equivalent to C0116)
# D103: Missing docstring in public function (equivalent to C0116)
# D104: Missing docstring in public package (equivalent to C0114)
# D105: Missing docstring in magic method (equivalent to C0116)
# D106: Missing docstring in public nested class (equivalent to C0115)
# Missing : Too few public methods (equivalent to R0903)
# PLR0913: Too many arguments (equivalent to R0913)
"*.py" = ["D100", "D101", "D102", "D103", "D104", "D105", "D106", "PLR0913"]
